add new changes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 					<article class="project">
 						<a href="./socket.html" target="_blank">
-							<img class="project__img" src="./img/portfolio/Shiro.jpg" alt="Socket.io" width="970px" height="450px">
+							<img class="project__img" src="./img/portfolio/Chat-join.jpg" alt="Socket.io-join" width="970px" height="450px">
 						</a>
 						<h3 class="project__title"><a href="https://socket-chat-client.netlify.app/" target="_blank">Онлайн-чат на socket.io</a></h3>
 					</article>
@@ -83,7 +83,7 @@
 					</a>
 					<a href="https://vk.com/id83828580" class="messanger" target="_blank">
 						<img src="./img/icons/vk.svg" alt="Связаться Вконтакте">
-						Связаться Вконтакте
+						Связаться VK
 					</a>
 				</div>
 			</div>
