--- a/socket.html
+++ b/socket.html
@@ -23,10 +23,13 @@
 						Для фронтенда были использованы React и снова Socket.io.<br>
 						Развертывание онлайн-чата было выполнено на Netlify и Render.
 					</p>
-					<p class="inner__page-link">Адрес сайта: <a href="https://socket-chat-client.netlify.app/"><Online-chat></Online-chat></a></p>
+					<p class="inner__page-link">Адрес сайта: <a href="https://socket-chat-client.netlify.app/" target="_blank">Online chat</a></p>
 				</div>
 			</div>
-			<img class="inner__page-img" src="./img/projects/project-go-travel.jpg" srcset="./img/projects/project-go-travel@2x.jpg 2x" alt="GoTravel">
+			<p class="inner__page-photo-title">Главная страница для входа в комнату</p>
+			<img class="inner__page-img" src="./img/projects/Chat-join.jpg" alt="Socket.io-join">
+			<p class="inner__page-photo-title">Комната для общения</p>
+			<img class="inner__page-img" src="./img/projects/Chat-messages.jpg" alt="Socket.io-messages">
 					<a class="inner__page-backlink" href="./index.html">
 						<img src="./img/icons/arrow-left.svg" alt="Pointer" >
 						<span>Назад на главную</span>
