--- a/lofthouse.html
+++ b/lofthouse.html
@@ -19,7 +19,7 @@
 					<p class="inner__header-description">Верстка многостраничного сайта. Главная, страница с услугами,<br> 
 						карта проезда с формой обратной связи, страница со статьей.
 					</p>
-					<p class="inner__page-link">Адрес сайта: <a href="https://dimakichigin.github.io/lofthouse/">Loft House</a></p>
+					<p class="inner__page-link">Адрес сайта: <a href="https://dimakichigin.github.io/lofthouse/" target="_blank">Loft House</a></p>
 				</div>
 			</div>
 			<img class="inner__page-img" src="./img/projects/project-lofthouse.jpg" srcset="./img/projects/project-lofthouse@2x.jpg 2x" alt="LoftHouse">
