--- a/shiro.html
+++ b/shiro.html
@@ -19,7 +19,7 @@
 					<p class="inner__header-description">Верстка многостраничного сайта для моего друга.<br>Сайт используется для демонстрации 
 						продукта в виде Discord бота, который обладает множеством функционала. Например рисование изображений
 					</p>
-					<p class="inner__page-link">Адрес сайта: <a href="https://shiro.legalloli.net/">Shiro-legalloli</a></p>
+					<p class="inner__page-link">Адрес сайта: <a href="https://shiro.legalloli.net/" target="_blank">Shiro-legalloli</a></p>
 				</div>
 			</div>
 			<img class="inner__page-img" src="./img/projects/shiro.legalloli.net_ (2).png" alt="Shiro-legalloli">
