new background to index.html

--- a/index.html
+++ b/index.html
@@ -25,17 +25,14 @@
 					<p class="header__text">Frontend-разработчик <br>JavaScript & React</p>
 					<div class="header__buttons">
 						<a class="button-portfolio" href="#portfolio">Портфолио</a>
-						<!-- <button class="button-portfolio" type="button">
-							Портфолио
-						</button> -->
 						<a class="button-contacts" href="#contacts"><span>Контакты</span></a>
 					</div>
 				</div>
 			</div>
 		</div>
-		<!-- <video class="header__video" autoplay muted loop>
+		<video class="header__video" autoplay muted loop>
 			<source type="video/mp4" src="./video/asteroidbelt2.mp4">
-		</video> -->
+		</video>
 	</header>
 
 	<main>
