new changes in lofthouse

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
 						<a href="./lofthouse.html" target="_blank">
 							<img class="project__img" src="./img/portfolio/project-03.jpg" srcset="./img/portfolio/project-03@2x.jpg 2x" alt="Сайт жилого комплекса">
 						</a>
-						<h3 class="project__title"><a href="dimakichigin.github.io/lofthouse/" target="_blank">Сайт жилого комплекса</a></h3>
+						<h3 class="project__title"><a href="https://dimakichigin.github.io/lofthouse/" target="_blank">Сайт жилого комплекса</a></h3>
 					</article>
+					
 
 					<article class="project">
 						<a href="./shiro.html" target="_blank">
