--- a/lofthouse.html
+++ b/lofthouse.html
@@ -16,8 +16,8 @@
 			<div class="inner__page-details">
 				<h1 class="inner__page-title">Сайт жилого комплекса</h1>
 				<div class="inner__page-text">
-					<p class="inner__header-description">Верстка многостраничного сайта. Главная, страница с услугами,<br> 
-						карта проезда с формой обратной связи, страница со статьей.
+					<p class="inner__header-description">Верстка сайта жилого комплекса Loft House. Главная, страница с услугами,<br> 
+						карта проезда с формой обратной связи, видеоролик с демонстрацией квартир.
 					</p>
 					<p class="inner__page-link">Адрес сайта: <a href="https://dimakichigin.github.io/lofthouse/" target="_blank">Loft House</a></p>
 				</div>
